# ari_robot

./: README.md
ari_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
ari_bringup/config/: ari.rviz  dynamixel_head.yaml
ari_bringup/config/approach_planner/: approach_planner_ari_v1.yaml  approach_planner_ari_v2.yaml
ari_bringup/config/ari_hardware/: ari_hardware.yaml.em  ari_hardware_no-arm.yaml
ari_bringup/config/joy_teleop/: joy_teleop.yaml  joy_teleop.yaml.em  joy_teleop_no-arm.yaml
ari_bringup/config/motions/: ari_motions.yaml  ari_v1_motions.yaml  ari_v2_motions.yaml  convert_to_ros2.py
ari_bringup/config/twist_mux/: joystick.yaml  twist_mux_locks.yaml
ari_bringup/launch/: ari.launch  ari_bringup.launch  ari_bringup.launch.py  ari_play_motion2.launch.py  dynamixel_node.launch  joystick_teleop.launch  joystick_teleop.launch.py  play_motion.launch  qr_detector.launch  torso_back_camera.launch  torso_front_camera.launch  twist_mux.launch  twist_mux.launch.py
ari_bringup/launch/config/: ari.rviz
ari_bringup/module/: joystick.yaml  play_motion2.yaml  twist_mux.yaml
ari_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
ari_controller_configuration/config/: arm_left_controller.yaml  arm_right_controller.yaml  current_limit_controllers.yaml  current_limit_controllers_v1.yaml  current_limit_controllers_v2.yaml  head_controller.yaml  joint_state_broadcaster_v1.yaml  joint_state_broadcaster_v2.yaml  joint_state_controller_extra_joints.yaml  joint_state_controller_extra_joints_v2.yaml  mobile_base_controller.yaml  mobile_base_controller_multipliers.yaml  pids.yaml  pids_v1.yaml  pids_v2.yaml
ari_controller_configuration/config/joint_trajectory/: hand-left-joint_trajectory_controllers.yaml  hand-right-joint_trajectory_controllers.yaml  hands-joint_trajectory_controllers.yaml  joint_trajectory_controllers.yaml  joint_trajectory_controllers_v1.yaml  joint_trajectory_controllers_v2.yaml
ari_controller_configuration/launch/: ari_controllers.launch  arm_left_controller.launch.py  arm_right_controller.launch.py  current_limit_controllers.launch  default_controllers.launch  default_controllers.launch.py  hand_controllers.launch  head_controller.launch.py  joint_state_broadcaster.launch.py  joint_state_controller.launch  mobile_base_controller.launch.py
ari_controller_configuration/module/: 10_default_controllers.yaml
ari_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ari_description/ari_description/: ari_launch_utils.py
ari_description/config/: ari.rviz
ari_description/config/collision/: collision_parameters.yaml  collision_parameters_v2.yaml
ari_description/gazebo/: gazebo.urdf.xacro
ari_description/launch/: robot_state_publisher.launch.py  show.launch.py
ari_description/meshes/arm/: arm_1_collision.stl  arm_1_v2.stl  arm_2_collision.stl  arm_2_v2.stl  arm_3_collision.stl  arm_3_v2.stl  arm_4_collision.stl  arm_4_v2.stl  arm_5_v2.stl  arm_base.stl  arm_base_collision.stl  arm_base_v2.stl  arm_left_1.stl  arm_left_2.stl  arm_left_3.stl  arm_left_4.stl  arm_left_4_collision.stl  arm_left_base.stl  arm_right_1.stl  arm_right_2.stl  arm_right_3.stl  arm_right_4.stl  arm_right_4_collision.stl  hand_1.stl  hand_1_collision.stl  hand_2.stl  hand_2_collision.stl
ari_description/meshes/base/: base.stl  base_collision.stl  base_v2.dae  base_v2.stl  docking_joint_v2.stl
ari_description/meshes/head/: head_1.stl  head_1_collision.stl  head_1_v2.stl  head_2.dae  head_2.stl  head_2_collision.stl  head_2_v2.stl  head_base_v2.stl
ari_description/meshes/sensors/: head_camera.stl  torso_camera_1.stl  torso_camera_2.stl
ari_description/meshes/wheels/: caster_left.stl  caster_right.stl  caster_v2.stl  wheel_left.stl  wheel_left_v2.stl  wheel_right.stl  wheel_right_v2.stl
ari_description/module/: 10_robot_state_publisher.yaml
ari_description/robots/: a  ari.urdf.xacro  ari.urdf.xacro.orig  show.launch  upload.launch
ari_description/ros2_control/: ros2_control.urdf.xacro  transmissions.urdf.xacro
ari_description/test/: test_ari.test  test_description.launch.py
ari_description/urdf/: materials.urdf.xacro
ari_description/urdf/arm/: actuators.urdf.xacro  arm.ros2_control.xacro  arm.transmission.xacro  arm.urdf.xacro  arm_v2.urdf.xacro
ari_description/urdf/base/: base.urdf.xacro  base_sensors.urdf.xacro  base_v2.urdf.xacro  docking_link_v2.urdf.xacro
ari_description/urdf/calibration/: calibration_constants.urdf.xacro
ari_description/urdf/head/: head.ros2_control.xacro  head.transmission.xacro  head.urdf.xacro  head.urdf.xacro.orig  head_v2.urdf.xacro
ari_description/urdf/sensors/: bumper.urdf.xacro  courier.urdf.xacro  elp_rgb.urdf.xacro  hokuyo_urg_04lx_ug01_laser.urdf.xacro  imx179_camera.gazebo.xacro  microphone.urdf.xacro  range.urdf.xacro  rpi_camera.gazebo.xacro  sensors.ros2_control.xacro  sick_tim551_laser.urdf.xacro  sick_tim561_laser.urdf.xacro  sick_tim571_laser.urdf.xacro  structure_sensor.urdf.xacro  torso_v2_265.urdf.xacro  torso_v2_rgbd.urdf.xacro  ydlidar_tg15_laser.gazebo.xacro  ydlidar_tg15_laser.urdf.xacro  ydlidar_tg30_laser.gazebo.xacro  ydlidar_tg30_laser.urdf.xacro
ari_description/urdf/torso/: torso_sensors.urdf.xacro  torso_sensors_v2.urdf.xacro
ari_description/urdf/wheels/: caster.gazebo.xacro  caster.urdf.xacro  caster_v2.gazebo.xacro  caster_v2.urdf.xacro  wheel.gazebo.xacro  wheel.ros2_control.xacro  wheel.transmission.xacro  wheel.urdf.xacro  wheel_v2.gazebo.xacro  wheel_v2.transmission.xacro  wheel_v2.urdf.xacro
ari_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
