<?xml version="1.0"?>
<package format="2">
  <name>ari_bringup</name>
  <version>0.0.6</version>
  <description>Launch files to upload the robot description and start the controllers</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tf_lookup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ari_controller_configuration</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <!--exec_depend>dynamic_footprint</exec_depend-->
  <exec_depend>head_action</exec_depend>
  <!--exec_depend>ari_moveit_config</exec_depend-->
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>speed_limit_node</exec_depend>
  <exec_depend>camera_calibration_files</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>robot_pose</exec_depend>
  <exec_depend>twist_mux</exec_depend>

</package>
