<?xml version="1.0"?>
<package format="3">
  <name>ari_bringup</name>
  <version>2.0.4</version>
  <description>Launch files to upload the robot description and start the controllers</description>
  <maintainer email="severin.lemaigan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>play_motion2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>teleop_tools_msgs</exec_depend>
  <exec_depend>ari_controller_configuration</exec_depend>
  <exec_depend>ari_description</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>twist_mux_msgs</exec_depend>
<!-- TODO: commented out during port to ROS2. Need to re-enable selectively what is needed here
  <exec_depend>tf_lookup</exec_depend>
  <exec_depend>head_action</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>speed_limit_node</exec_depend>
  <exec_depend>camera_calibration_files</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>robot_pose</exec_depend>
  <exec_depend>zbar_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
