<?xml version="1.0"?>
<package  format="2">
  <name>ari_controller_configuration</name>
  <version>0.0.9</version>
  <description>Configuration and launch files of ARI's controllers</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--exec_depend>rospy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>play_motion</exec_depend-->
  <exec_depend>current_limit_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <!--exec_depend>imu_sensor_controller</exec_depend-->
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>ari_moveit_config</exec_depend>
  <!--exec_depend>gravity_compensation_controller</exec_depend-->
  <!--exec_depend>pal_local_joint_control</exec_depend-->

</package>
