<?xml version="1.0"?>
<package  format="3">
  <name>ari_controller_configuration</name>
  <version>2.0.2</version>
  <description>Configuration and launch files of ARI's controllers</description>
  <maintainer email="severin.lemaigan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

<!-- TODO ROS2
    <exec_depend>current_limit_controller</exec_depend>
-->
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>play_motion2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
