<?xml version="1.0"?>
<package format="2">

  <name>ari_description</name>
  <version>0.0.31</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the ARI robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>realsense_gazebo_plugin</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rosbash</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>hey5_transmissions</exec_depend>
  <!--exec_depend>ari_description_calibration</exec_depend-->

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

</package>
