<?xml version="1.0"?>
<package format="2">
  <name>ari_robot</name>
  <version>0.0.60</version>
  <description>Description and controller configuration of ARI</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ari_description</exec_depend>
  <exec_depend>ari_controller_configuration</exec_depend>
  <exec_depend>ari_bringup</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
