<?xml version="1.0"?>
<package format="3">
  <name>ari_robot</name>
  <version>2.0.5</version>
  <description>Description and controller configuration of ARI</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ari_description</exec_depend>
  <exec_depend>ari_controller_configuration</exec_depend>
  <exec_depend>ari_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
